WebCore: Assertion failure in CompositeEditCommand::moveParagraphs() and crash in Node::nodeIndex() when pasting. <rdar://problem/7148712> https://bugs.webkit.org/show_bug.cgi?id=28992

Patch by Enrica Casucci <enrica@apple.com> on 2009-10-02
Reviewed by Adele Peterson.

Test: editing/selection/replace-selection-crash.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::mergeEndIfNeeded): Handle properly the case of
the destination position matching the end of the paragraph to move.

LayoutTests: Added test case.
<rdar://problem/7148712> Assertion failure in CompositeEditCommand::moveParagraphs() and crash in Node::nodeIndex() when pasting.
https://bugs.webkit.org/show_bug.cgi?id=28992

Patch by Enrica Casucci <enrica@apple.com> on 2009-10-02
Reviewed by Adele Peterson.

* editing/selection/replace-selection-crash-expected.txt: Added.
* editing/selection/replace-selection-crash.html: Added.



Canonical link: https://commits.webkit.org/40600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49041 268f45cc-cd09-0410-ab3c-d52691b4dbfc